# CLionTemplateProject

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  test.cpp
libA/: CMakeLists.txt  libraryA.cpp  libraryA.h
